Wed Nov  3 10:24:38 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_terse): If prog-if is zero, but it's present in the
	ID list, show it.

Sat Oct 30 11:06:35 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Released as version 2.1.

	* pci.ids: Synced to devlist.h in 2.3.24 kernel. Merged in
	lots of contributed entries.

Thu Oct 14 10:40:12 1999  Dave Jones    <dave@powertweak.com>

	* pci.ids: Added lots of subsystem definitions.

Sat Oct  9 14:32:28 1999  Martin Mares  <mj@albireo.ucw.cz>

	* setpci.man: Better example.

	* lspci.c: Resolve prog-if names.

	* lib/names.c: Adapted to new pci.ids syntax.

	* pci.ids: Reorganized the pci.ids file. Subsystems are listed
	under devices, classes can optionally contain prog-if information.
	New ID's, as usually.

Wed Sep 22 09:45:24 1999  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: New ID's. As usually.

	* lspci.c (show_htype1, show_htype2): Don't show `closed' bridge windows
	unless we're vvvery verbose.

Mon Sep 20 11:22:54 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_htype2): Don't forget a TAB before the "I/O window" line.

Tue Sep 14 09:31:01 1999  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: New ID's. Again.

Thu Aug  5 17:45:42 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_size): Don't show size if it's zero (usually
	due to bus-centric mode being enabled).

Tue Jul 20 13:25:09 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lib/pci.h: Types are OS dependent.

	* lib/internal.h: Byte order hacks are OS dependent.

	* lib/configure: Recognize FreeBSD. Also set OS_XXX according to the OS.

	* lib/Makefile, lib/access.c: Added fbsd-device target.

	* pci.ids: Added an entry for PLX 9080 bridges with subsystem ID
	incorrectly set to device ID.

	* README: Added a note that we support FreeBSD.

	* Makefile (PREFIX, ROOT): Set it depending on the OS.
	(%.8): Grrr, BSD date is not able to convert date formats the same way
	as GNU date does. Use sed instead.